--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -2,10 +2,10 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Information"
     }
   },
   "ConnectionStrings": {
-    "Default":"Data source=datingapp.db"
+    "DefaultConnection":"Data source=datingapp.db"
   }
 }
